Criando a activity AtualizarMeusDados e o seu layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,8 @@
     <!-- texto da tela de background gradiente -->
     <string name="txtTituloBackground">Aplicando Efeito\nBackground Gradiente</string>
 
+    <!-- tela atualizar meus dados -->
+    <string name="txtAtualizarMeusDados">Atualizar Meus Dados</string>
+
 
 </resources>
